src/test/deca/context/valid/condition_modulo_01.deca
// Description:
//    Programme pour tester des exceptions à la suite.
//
// Resultats:
//      1
//
//
// Historique:
//    cree le 04/01/2023
{
    if (true) {
        print(1);
    } else if (true) {
        print(2);
    } else if (true) {
        print(3);
    } else {
        print(4);
    }
}