src/test/deca/context/invalid/objet/param_already_defined.deca
// Description:
//     Deux arguments de méthodes de même nom.
//
// Resultats:
//    Error
//
// Historique:
//    cree le 01/01/2023

class A{
    int getX(int x, int x){

    }
}


